--- a/src/app/modules/guide/components/activities/activities.component.html
+++ b/src/app/modules/guide/components/activities/activities.component.html
@@ -46,7 +46,7 @@
     <div *ngIf="previousBookingsList.length <= 0 && isData">
       <div class="row cust-grid">
         <div class="col-12 text-center">
-            <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/flamenco-list-is-empty-1.png">
+            <img class="img-fluid my-5 h-50 w-25" src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/flamenco-list-is-empty-1.png">
             <h1 style="font-family: 'Dancing Script', cursive; font-size: 4vh;">No Recent activity !!</h1>
         </div>
     </div>
