--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -45,7 +45,7 @@
     <div *ngIf="bookingsList.length <= 0 && isData">
       <div class="row cust-grid">
           <div class="col-12 text-center">
-              <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/cherry-list-is-empty-1.png">
+              <img class="img-fluid my-5 h-50 w-25" src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/cherry-list-is-empty-1.png">
               <h1 style="font-family: 'Dancing Script', cursive; font-size: 4vh;">No Bookings !!</h1>
           </div>
       </div>
