--- a/src/app/modules/guide/components/create-deal/create-deal.component.scss
+++ b/src/app/modules/guide/components/create-deal/create-deal.component.scss
@@ -11,7 +11,7 @@ label {
 
 .bg {
     min-height: 100vh;
-    background-image: url(../../../../../assets/images/sylwia-bartyzel-D2K1UZr4vxk-unsplash.jpg);
+    background-image: url(https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/sylwia-bartyzel-D2K1UZr4vxk-unsplash.jpg);
     background-size: cover;
     background-position: center;
 }
