--- a/src/app/modules/guide/components/requests/requests.component.html
+++ b/src/app/modules/guide/components/requests/requests.component.html
@@ -46,7 +46,7 @@
     <div *ngIf="requestList.length <= 0 && isData">
       <div class="row cust-grid">
           <div class="col-12 text-center">
-              <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/fogg-87.png">
+              <img class="img-fluid my-5 h-50 w-25" src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/fogg-87.png">
               <h1 style="font-family: 'Dancing Script', cursive; font-size: 4vh;">No Requests !!</h1>
           </div>
       </div>
