--- a/src/app/modules/home/features/features.component.html
+++ b/src/app/modules/home/features/features.component.html
@@ -1,7 +1,7 @@
 <!-- Card test -->
 <section id="timeline">
     <div class="tl-item">
-        <div class="tl-bg" style="background-image: url(https://placeimg.com/1002/1002/nature)"></div>
+        <div class="tl-bg" style="background-image: url(https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/nature2.jpeg)"></div>
         <div class="tl-year">
             <p class="f2 heading--sanSerif">Tourist</p>
         </div>
@@ -15,7 +15,7 @@
     </div>
 
     <div class="tl-item">
-        <div class="tl-bg" style="background-image: url(https://placeimg.com/1000/1000/nature)"></div>
+        <div class="tl-bg" style="background-image: url(https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/nature.jpeg)"></div>
         <div class="tl-year">
             <p class="f2 heading--sanSerif">Guide</p>
         </div>
