--- a/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
+++ b/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
@@ -6,7 +6,7 @@
           </div>
       </div>
       <div class="col-6">
-          <img src="assets\images\undraw_wall_post_83ul (1).svg" class="float-right m-4" style="height: 280px; width:auto">
+          <img src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/undraw_wall_post_83ul (1).svg" class="float-right m-4" style="height: 280px; width:auto">
       </div>
   </div>
 </div>
