--- a/src/app/modules/tourists/components/favourites/favourites.component.html
+++ b/src/app/modules/tourists/components/favourites/favourites.component.html
@@ -12,7 +12,7 @@
 <div *ngIf="favouritesList.length <= 0 && isData"  class="container-fluid">
     <div class="row vertical-center" style="min-height: 85vh;">
       <div class="col-12 text-center">
-        <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/bermuda-166.png">
+        <img class="img-fluid my-5 h-50 w-25" src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/bermuda-166.png">
         <h1 style="font-family: 'Dancing Script', cursive; font-size: 4vh;">Nothing here !!</h1>
     </div>
     </div>
