--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -1,4 +1,4 @@
-<mdb-card style="background-image: url('https://mdbootstrap.com/img/Photos/Others/gradient1.jpg'); background-repeat: no-repeat; background-size: cover;">
+<mdb-card style="background-image: url('https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/gradient1.jpg'); background-repeat: no-repeat; background-size: cover;">
   <div class="text-white text-center py-5 px-4">
     <div>
       <img class="img-fluid card-title pt-3 mb-5 font-bold" src="../../../../assets/images/areoplane white.png" alt="">
