--- a/src/app/shared/components/guide-profile/guide-profile.component.html
+++ b/src/app/shared/components/guide-profile/guide-profile.component.html
@@ -5,7 +5,7 @@
                 <div class="container mt-4">
                     <div class="row">
                         <div class="col-4 col-sm-3 col-md-3 view overlay waves-light " mdbWavesEffect>
-                            <img [src]="guide?.picUrl ? guide?.picUrl : '../../assets/images/grayman.png'" 
+                            <img [src]="guide?.picUrl ? guide?.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" 
                             class="img-fluid rounded-circle z-depth-0" style="height:80px; width:80px;">
                             <a>
                                 <div class="mask rgba-white-slight"></div>
@@ -70,7 +70,7 @@
             </div>
             <div class="card my-4 bgclass">
                 <div class="view overlay mx-auto pt-5">
-                    <img class="card-img rounded-circle " [src]="guide?.picUrl ? guide?.picUrl : '../../assets/images/grayman.png'" style="width:100px; height:100px;" alt="Card image cap">
+                    <img class="card-img rounded-circle " [src]="guide?.picUrl ? guide?.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" style="width:100px; height:100px;" alt="Card image cap">
                     <a>
                         <div class="mask rgba-white-slight"></div>
                     </a>
