--- a/src/app/shared/components/login-page/login-page.component.html
+++ b/src/app/shared/components/login-page/login-page.component.html
@@ -45,14 +45,14 @@
             <div class="leftbox">
                 <h2 class="title mt-4"><b><span>VOILA</span>&<br>Tourist</b></h2>
                 <p class="desc">pick your perfect <span>bouquet</span></p>
-                <img class="flower smaller" src="assets\images\ouch-guide-login.png" alt="" border="0"><br>
+                <img class="flower smaller" src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/ouch-guide-login.png" alt="" border="0"><br>
                 <p class="account">Are you a traveller?</p>
                 <button [routerLink]="['/login/tourist']" class="button" id="signin">Click Here</button>
             </div>
             <div class="rightbox">
                 <h2 class="title mt-4"><b><span>VOILA</span>&<br>Guide</b></h2>
                 <p class="desc"> pick your perfect <span>bouquet</span></p>
-                <img class="flower" src="assets\images\tourist-ouch-pic-medium.png" /><br>
+                <img class="flower" src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/tourist-ouch-pic-medium.png" /><br>
                 <p class="account">Are you a guide?</p>
                 <button [routerLink]="['/login/guide']" class="button" id="signup">Click Here</button>
             </div>
