--- a/src/app/shared/components/personal-modal/personal-modal.component.html
+++ b/src/app/shared/components/personal-modal/personal-modal.component.html
@@ -5,7 +5,7 @@
     <div class="modal-content">
         <form [formGroup]="personalBooking" (ngSubmit)="submitPersonalBooking()">
             <div class="modal-header">
-                <img [src]="guide?.picUrl ? guide?.picUrl : '../../assests/images/grayman.png'" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
+                <img [src]="guide?.picUrl ? guide?.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
             </div>
             <div class="modal-body text-center mb-1">
                 <h5 class="mt-1 mb-3">Hi! Lets personalize your experience</h5>
