--- a/src/app/modules/guide/components/deals/deals.component.html
+++ b/src/app/modules/guide/components/deals/deals.component.html
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="col-12  col-md-6">
-                <img src="assets\images\abstract-success.png" class="img-fluid" style="height: auto; width:100%">
+                <img src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/abstract-success.png" class="img-fluid" style="height: auto; width:100%">
             </div>
         </div>
     </div>
