--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -5,7 +5,7 @@
             <div class="content1  m-auto">
                 <div class="row top-bar pt-4 pb-4 m-0 mb-2">
                     <div class="col-5 text-center">
-                        <img [src]="user.picUrl ? user.picUrl : '../../../../../assets/images/grayman.png'" class="img-fluid z-depth-1 rounded-circle" alt="Responsive image">
+                        <img [src]="user.picUrl ? user.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" class="img-fluid z-depth-1 rounded-circle" alt="Responsive image">
 
                     </div>
                     <div class="col-7 guide-name m-auto">
