--- a/src/app/modules/home/top-deals/top-deals.component.scss
+++ b/src/app/modules/home/top-deals/top-deals.component.scss
@@ -1,9 +1,9 @@
-@media(max-width: 992px) {
+// @media(max-width: 992px) {
     .dealImg {
         height: 250px;
         width: 100%;
     }
-}
+// }
 
 .parallax {
     /* Create the parallax scrolling effect */
