--- a/src/app/modules/tourists/components/histories/histories.component.html
+++ b/src/app/modules/tourists/components/histories/histories.component.html
@@ -44,7 +44,7 @@
     <div *ngIf="previousList.length <=0 && isData">
         <div class="row cust-grid">
             <div class="col-12 text-center">
-                <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/flamenco-list-is-empty-1.png">
+                <img class="img-fluid my-5 h-50 w-25" src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/flamenco-list-is-empty-1.png">
                 <h1 style="font-family: 'Dancing Script', cursive;">No Previous Booking !!</h1>
             </div>
         </div>
