--- a/src/app/shared/components/deal-modal/deal-modal.component.html
+++ b/src/app/shared/components/deal-modal/deal-modal.component.html
@@ -4,7 +4,7 @@
 <div class="modal-dialog cascading-modal modal-avatar " role="document">
     <div class="modal-content">
         <div class="modal-header">
-            <img [src]="deal?.guideId?.picUrl ? deal?.guideId?.picUrl : '../../assets/images/grayman.png'" style="height:100px; width:100px" alt="" class="rounded-circle img-responsive">
+            <img [src]="deal?.guideId?.picUrl ? deal?.guideId?.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" style="height:100px; width:100px" alt="" class="rounded-circle img-responsive">
         </div>
         <div class="modal-body text-center mb-0 pb-0">
             <h4 *ngIf="role !== 'guide'" [routerLink]="['/tourists/touristshome/guideProfile', deal?.guideId?._id]">{{deal?.guideId?.gender}} {{deal?.guideId?.name | titlecase}}</h4>
@@ -92,7 +92,7 @@
     <div class="modal-dialog cascading-modal modal-avatar " role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <img [src]="deal?.guideId?.picUrl ? deal?.guideId?.picUrl : '../../assets/images/grayman.png'" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
+                <img [src]="deal?.guideId?.picUrl ? deal?.guideId?.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
             </div>
             <div class="modal-body text-center mb-1">
                 <h5 class="mt-1 mb-3">Hi! Lets personalize your experience</h5>
