--- a/src/app/modules/home/map/map.component.html
+++ b/src/app/modules/home/map/map.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid px-0">
+<div class="container-fluid px-0" style="background-image: url(../../../../assets/images/sylwia-bartyzel-D2K1UZr4vxk-unsplash.jpg);">
    <div class="row map d-none d-lg-flex py-5">
       <div class="col-lg-8 col-xl-8 text-center">
          <div class="map-main">
