--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
                 <td>{{guide.dob | date: 'MMM dd, y'}}</td>
                 <td>{{guide.state}}</td>
                 <td>
-                  <a (click)="navigateToGuideProfile(guide)" size="sm" class="btn mx-0" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
+                  <a (click)="navigateToGuideProfile(guide)" size="sm" class="btn mx-0" mdbBtn style="background: #553d67;" mdbWavesEffect>VIEW</a>
                 </td>
               </tr>
             </tbody>
@@ -60,7 +60,7 @@
           <div>{{guide.phoneNumber}}</div>
         </div>
         <div class="col-6 col-sm-4">
-          <a (click)="navigateToGuideProfile(guide)" size="sm" class="btn mx-0" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
+          <a (click)="navigateToGuideProfile(guide)" size="sm" class="btn mx-0" mdbBtn style="background: #553d67;" mdbWavesEffect>VIEW</a>
         </div>
         </div>
       </mdb-card-text>
