--- a/src/app/modules/admin/pages/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.scss
@@ -20,3 +20,6 @@ table.table th, table.table td {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+.card h5{
+  background: linear-gradient(90deg, rgba(85,61,103,1) 0%, rgba(117,117,117,1) 100%) !important;
+}
