--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -79,6 +79,6 @@
         </div>
     </div>
     <div class="footer-copyright text-center py-3">
-        <h3>Find a Travel <del> Guide </del> Partner</h3>
+        <h3>Find a Travel <del> Guide </del> Companion</h3>
     </div>
 </footer>
