--- a/src/app/shared/components/login-page/login-page.component.html
+++ b/src/app/shared/components/login-page/login-page.component.html
@@ -15,7 +15,7 @@
                             <div class="text-white"><input (change)="showGuidePwd($event)" type="checkbox">&nbsp;<small class="text-muted">Show Password</small></div>
                         </div>
                         <div class="md-form form-group mt-5 text-center">
-                            <a class="mb-2 text-info ">Forgot Password?</a>
+                            <a class="mb-2 text-info forgot">Forgot Password?</a>
                             <button type="submit" class="button submit mt-2" (click)="login('guide')">Log in</button>
                         </div>
                     </form>
@@ -35,7 +35,7 @@
 
                         </div>
                         <div class="md-form form-group mt-5 text-center">
-                            <a class="mb-2 text-info ">Forgot Password?</a>
+                            <a class="mb-2 text-info forgot">Forgot Password?</a>
                             <button type="submit" class="button submit mt-2" (click)="login('tourist')">Login</button>
                         </div>
                     </form>
@@ -73,7 +73,8 @@
                             <div class="group1 form-group mb-5">
                                 <label for="form2" class="label">Password</label>
                                 <input mdbInput [type]="guideShow ? 'text' : 'password'" formControlName="password" id="form2" class="input">
-                                <div class="text-white"><input (change)="showGuidePwd($event)" type="checkbox">&nbsp;Show Password</div>
+                                <div class="text-white"><input (change)="showGuidePwd($event)" type="checkbox">&nbsp; Show Password
+                                </div>
 
 
                                 <a class="mt-2 text-info float-right">Forgot Password?</a>
@@ -93,7 +94,8 @@
                             <div class="group1 form-group mb-5">
                                 <label for="form2" class="label">Password</label>
                                 <input mdbInput [type]="touristShow ? 'text' : 'password'" formControlName="password" id="form2" class="input">
-                                <div class="text-white"><input (change)="showTouristPwd($event)" type="checkbox">&nbsp;Show Password</div>
+                                <div class="text-white"><input (change)="showTouristPwd($event)" type="checkbox">&nbsp; Show Password
+                                </div>
 
 
                                 <a class="mt-2 text-info float-right">Forgot Password?</a>
