--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,10 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Neuton:ital@1&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400|Lora');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Neuton&display=swap');
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
-
 body {
     height: 100%;
     // min-height: 50vh;
@@ -305,6 +303,14 @@ button[disabled],
 .btn:disabled {
     background-color: #cccccc;
     opacity: 0.5;
+}
+
+.dpurple {
+    background-color: #553d67;
+}
+
+.bgrey {
+    background-color: #757575;
 }
 
 // ssss
