--- a/src/app/modules/home/map/map.component.html
+++ b/src/app/modules/home/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid px-0"
-   [ngStyle]="{'background-image':'url(https://voilabucket2020.s3.ap-south-1.amazonaws.com/States/' + selectedState.state + '.jpg)'}"
+   [ngStyle]="{'background-image':'url(https://voilabucket2020.s3.ap-south-1.amazonaws.com/States/' + selectedState?.state + '.jpg)'}"
    style="background-repeat: no-repeat; background-size: cover;">
    <div class="row map d-none d-lg-flex py-5">
       <div class="col-lg-8 col-xl-8 text-center">
